# get_rgbd

./: readme.md
capture_rgbd/: CMakeLists.txt  draw.py  draw_depth.py  draw_rgb.py
capture_rgbd/src/: NuitrackGLSample.cpp  NuitrackGLSample.h  main.cpp  memo.md
console_capture_rgbd/: CMakeLists.txt  draw.py
console_capture_rgbd/src/: main.cpp
new_capture/: CMakeLists.txt  README.txt
new_capture/src/: capture.cpp  capture.h  main.cpp  save.h  save_log.cpp  save_log.h
nuitrack_gl_sample/: CMakeLists.txt
nuitrack_gl_sample/src/: NuitrackGLSample.cpp
